--- a/Negocios/Negocio.csproj
+++ b/Negocios/Negocio.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="CompraNegocio.cs" />
+    <Compile Include="DetalleCompraNegocio.cs" />
     <Compile Include="InsumoNegocio.cs" />
+    <Compile Include="EstadoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorNegocio.cs" />
   </ItemGroup>
