--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoriaProducto.cs" />
+    <Compile Include="Categoria.cs" />
     <Compile Include="Compra.cs" />
     <Compile Include="DetalleCompra.cs" />
     <Compile Include="Empleado.cs" />
