--- a/Negocios/Negocio.csproj
+++ b/Negocios/Negocio.csproj
@@ -46,6 +46,8 @@
     <Compile Include="DetalleCompraNegocio.cs" />
     <Compile Include="InsumoNegocio.cs" />
     <Compile Include="EstadoNegocio.cs" />
+    <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="MarcaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorNegocio.cs" />
   </ItemGroup>
