--- a/Negocios/Negocio.csproj
+++ b/Negocios/Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="CompraNegocio.cs" />
     <Compile Include="DetalleCompraNegocio.cs" />
+    <Compile Include="FormulaNegocio.cs" />
     <Compile Include="InsumoNegocio.cs" />
     <Compile Include="EstadoNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
