--- a/WebAplication/WebAplication.csproj
+++ b/WebAplication/WebAplication.csproj
@@ -69,6 +69,11 @@
   <ItemGroup>
     <Content Include="Categorias.aspx" />
     <Content Include="Compras.aspx" />
+    <Content Include="Images\agregar.png" />
+    <Content Include="Images\borrar.png" />
+    <Content Include="Images\cancelar.png" />
+    <Content Include="Images\guardar.png" />
+    <Content Include="Images\modificar.png" />
     <Content Include="Inicio.aspx" />
     <Content Include="Insumos.aspx" />
     <Content Include="Productos.aspx" />
