--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -45,10 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Compra.cs" />
     <Compile Include="DetalleCompra.cs" />
     <Compile Include="Empleado.cs" />
-    <Compile Include="Estado.cs" />
     <Compile Include="Formula.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="Marca.cs" />
