--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Formula.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="Marca.cs" />
+    <Compile Include="Fabricacion.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
