--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -49,10 +49,12 @@
     <Compile Include="Compra.cs" />
     <Compile Include="DetalleCompra.cs" />
     <Compile Include="Empleado.cs" />
+    <Compile Include="Estado.cs" />
     <Compile Include="Formula.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Fabricacion.cs" />
+    <Compile Include="Medida.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
