--- a/Negocios/Negocio.csproj
+++ b/Negocios/Negocio.csproj
@@ -52,6 +52,7 @@
     <Compile Include="EstadoNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
+    <Compile Include="MedidaNegocio.cs" />
     <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorNegocio.cs" />
