--- a/WebAplication/WebAplication.csproj
+++ b/WebAplication/WebAplication.csproj
@@ -70,6 +70,7 @@
     <Content Include="Categorias.aspx" />
     <Content Include="Clientes.aspx" />
     <Content Include="Compras.aspx" />
+    <Content Include="DetallesCompra.aspx" />
     <Content Include="Empleados.aspx" />
     <Content Include="Fabricaciones.aspx" />
     <Content Include="Images\agregar.png" />
@@ -107,6 +108,13 @@
     </Compile>
     <Compile Include="Compras.aspx.designer.cs">
       <DependentUpon>Compras.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DetallesCompra.aspx.cs">
+      <DependentUpon>DetallesCompra.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetallesCompra.aspx.designer.cs">
+      <DependentUpon>DetallesCompra.aspx</DependentUpon>
     </Compile>
     <Compile Include="Empleados.aspx.cs">
       <DependentUpon>Empleados.aspx</DependentUpon>
