--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Compra.cs" />
     <Compile Include="Detallecompra.cs" />
+    <Compile Include="DetalleVenta.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="Formula.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Marca.cs" />
     <Compile Include="Fabricacion.cs" />
     <Compile Include="Medida.cs" />
+    <Compile Include="Venta.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
