--- a/Negocios/Negocio.csproj
+++ b/Negocios/Negocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ClienteNegocio.cs" />
     <Compile Include="CompraNegocio.cs" />
     <Compile Include="DetalleCompraNegocio.cs" />
+    <Compile Include="DetalleVentaNegocio.cs" />
     <Compile Include="EmpleadoNegocio.cs" />
     <Compile Include="FabricacionNegocio.cs" />
     <Compile Include="FormulaNegocio.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorNegocio.cs" />
+    <Compile Include="VentaNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
